# cv-pico-seq

./: .gitignore  CMakeLists.txt  README.md  clock.cpp  clock.h  eeprom.cpp  eeprom.h  eeprom_reset.cpp  eeprom_reset_CMakeLists.txt  io.cpp  io.h  main.cpp  mcp4822.cpp  mcp4822.h  sequencer.cpp  sequencer.h  ui.cpp  ui.h
reset_build/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  eeprom_reset.dis  eeprom_reset.elf  eeprom_reset.elf.map  eeprom_reset.hex  eeprom_reset.uf2
reset_build/pico-sdk/: Makefile  cmake_install.cmake
reset_build/pico-sdk/docs/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/boot_picobin_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/boot_picoboot_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/boot_uf2_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/hardware_claim/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/pico_base_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/pico_binary_info/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/pico_bit_ops_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/src/common/pico_divider_headers/: Makefile  cmake_install.cmake
reset_build/pico-sdk/tools/: Makefile  cmake_install.cmake
reset_build/picotool/src/picotoolBuild-stamp/: picotoolBuild-source_dirinfo.txt
reset_build/picotool/tmp/: picotoolBuild-cfgcmd.txt  picotoolBuild-mkdirs.cmake
(+177 files in other folders)
